Fix overflow-x scroll on all devices

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ main {
   justify-content: center;
   max-width: 1050px;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 
